fix post show alignment

--- a/app/assets/stylesheets/comment.scss
+++ b/app/assets/stylesheets/comment.scss
@@ -17,6 +17,7 @@
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     padding-top: 3px;
     padding-bottom: 3px;
+    padding-left: 6px;
 }
 
 .comment > div {
@@ -55,6 +56,7 @@
     align-items: center;
     padding-top: 0px;
     padding-bottom: 2px;
+    padding-left: 15px;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 
 }
