--- a/app/assets/stylesheets/likes.scss
+++ b/app/assets/stylesheets/likes.scss
@@ -3,6 +3,7 @@
     align-items: center;
     height: 30px;
     padding: 10px;
+    padding-left: 6px;
 }
 
 .likes-div img {
