--- a/app/assets/stylesheets/postshow.scss
+++ b/app/assets/stylesheets/postshow.scss
@@ -66,6 +66,7 @@
 .owner-caption {
     display: flex;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    padding-left: 6px;
 }
 
 .owner-caption p {
